# CombatTeam

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Buffer.cpp.D5EE7C481F0B0C4D.idx  Buffer.hpp.55A9831647473A83.idx  Layout.cpp.B83C7B37A47B0E9F.idx  Layout.hpp.0910EEA6F4DDE7D5.idx  Shader.cpp.CDD21F4C2D9692C5.idx  Shader.hpp.173B7565374DD04E.idx  Texture.cpp.3668D31440E34ADC.idx  Texture.hpp.F55F8F1D073E7C3E.idx  Window.cpp.31EEDE5651D44FBC.idx  Window.hpp.13870DA72822CEE9.idx  _fixes.hpp.8F44FA43DC5E2027.idx  _vectorize.hpp.005335EFBB0486F1.idx  common.hpp.88AC177997A77C58.idx  compute_common.hpp.9D0E5E1ED12ED7D1.idx  compute_vector_relational.hpp.93325F133793BCC9.idx  exponential.hpp.E89CD32CA0577377.idx  func_common.inl.476883443E646AE7.idx  func_exponential.inl.577446BCB6BA1356.idx  func_geometric.inl.2CCCB3F462B26C17.idx  func_integer.inl.B389CCD62C5C640D.idx  func_matrix.inl.6C50CDB0A7099D60.idx  func_packing.inl.2E148C804D6A8FD6.idx  func_trigonometric.inl.B205E7BCBAE3DE2F.idx  func_vector_relational.inl.669A93EB1AFF9971.idx  fwd.hpp.8E7A325C53B70A5B.idx  geometric.hpp.F422A126CC89476B.idx  glad.cpp.3509B74ACE301072.idx  glad.h.56EFB55511604F7F.idx  glfw3.h.18BF5B7A6378B1D5.idx  (+120 more)
assets/shaders/: vcube.glsl
src/: CMakeLists.txt
src/Engine/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Model_Loader.cpp  Model_Loader.hpp  Shader.cpp  Shader.hpp  String_Ext.c  String_Ext.cpp  String_Ext.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  fast_obj.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  Instance.cpp  Instance.hpp  main.cpp
(+7 files in other folders)
